--- a/src/assets/fonts/fonts.sass
+++ b/src/assets/fonts/fonts.sass
@@ -1,17 +1,17 @@
 @font-face
   font-family: 'ProximaNovaLight'
-  src:  url('./ProximaNova_Light.ttf')
+  src:  url('./ProximaNova_Light.woff') format('woff'), url('./ProximaNova_Light.woff2') format('woff2')
   font-weight: normal
   font-style: normal
 
 @font-face
   font-family: 'ProximaNovaRegular'
-  src:  url('./ProximaNova_Regular.ttf')
+  src:  url('./ProximaNova_Regular.woff') format('woff'), url('./ProximaNova_Regular.woff2') format('woff2')
   font-weight: normal
   font-style: normal
 
 @font-face
   font-family: 'ProximaNovaSemibold'
-  src:  url('./ProximaNova_Semibold.ttf')
+  src:  url('./ProximaNova_Semibold.woff') format('woff'), url('./ProximaNova_Semibold.woff2') format('woff2')
   font-weight: normal
   font-style: normal
